syntax = "proto3";

import "messages/Rpc.proto";
import "messages/ClientPlayer.proto";
import "messages/GlobalSettings.proto";
import "messages/InventoryDelta.proto";

message Footer {
    int32 unknown1 = 1;
    Unknown2 unknown2 = 2;

    message Unknown2 {
        bytes unknown1 = 1;
    }
}

message RequestEnvelop {
    Direction direction = 1;
    int64 request_id = 3;
    repeated Request requests = 4;
    Footer footer = 6;
    double latitude = 7;
    double longitude = 8;
    double altitude = 9;
    AuthInfo auth_info = 10;
    int64 unknown12 = 12;

    message Request {
        Method method = 1;
        bytes value = 2;
    }

    message Unknown3 {
        string unknown1 = 1;
    }

    message Unknown6 {
        int32 unknown1 = 1;
        Unknown2 unknown2 = 2;

        message Unknown2 {
            int32 unknown1 = 1;
        }

    }
    message AuthInfo {
        string provider = 1;
        JWT token = 2;

        message JWT {
            string contents = 1;
            int32 unknown2  = 2;
        }
    }
}

message ResponseEnvelop {
    Direction direction = 1;
    int64 response_id = 2;
    string api_url = 3;
    bytes footer = 6;
    Unknown7 unknown7 = 7;
    double latitude = 8;
    double longitude = 9;
    double altitude = 10;
    Unknown11 unknown11 = 11;
    repeated Response responses = 100;

    message Unknown7 {
        bytes unknown7_1 = 1;
        int64 timestamp = 2;
        bytes unknown7_3 = 3;
    }

    message Unknown11 {
        bytes unknown11_1 = 1;
        uint64 timestamp = 2;
        bytes unknown11_3 = 3;
    }

    message Response {
        int32 success = 1;
        bytes payload = 2;
        GlobalSettings settings = 3;
    }
}
